# project-196

./: .gitignore  Cargo.toml  README.md
assets/: cursor_shader.wgsl
src/: energy.rs  input.rs  interaction.rs  main.rs  player.rs  ui.rs  world.rs
src/items/: mod.rs
src/stations/: filter.rs  garden.rs  mod.rs  shelf.rs
